--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,7 +4,9 @@ on: # When will this action be triggered?
   workflow_dispatch: # Allows us to run manually
   schedule: # Schedule this task
   - cron: "0 0 * * *" # When will this run?
-
+permissions: 
+  contents: write # Action given to write to the repository
+  
 jobs:
   scrape: # Job name
     name: Scrape
@@ -25,7 +27,7 @@ jobs:
         run: warn-scraper ia --data-dir ./data/ # Scrape the Iowa WARN notices and store the data in the data folder
 
       - name: Commit and push
-        run: |
+        run: 
           git config user.name "GitHub Actions"
           git config user.email "actions@users.noreply.github.com"
           git add ./data/
