--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -28,7 +28,7 @@ jobs:
         run: warn-scraper ia --data-dir ./data/ # Scrape the Iowa WARN notices and store the data in the data folder
 
       - name: Commit and push
-        run: 
+        run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@users.noreply.github.com"
           git add ./data/
