--- a/.github/workflows/parallel.yaml
+++ b/.github/workflows/parallel.yaml
@@ -1,26 +1,21 @@
-name: First Scraper
+name: Matrix Scraper
 
 on:
   workflow_dispatch:
-    inputs:
-      state:
-        description: 'U.S. state to scrape'
-        required: true
-        default: 'ia'
-  schedule:
-  - cron: "0 0 * * *"
 
 permissions:
   contents: write
 
 jobs:
-  scrape:
-    name: Scrape
+  scrape: # Custom defined function (job) name
+    name: Scrape the data
     runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      fail-fast: false
+      matrix:
+        state: [ca, ia, ny]
     steps:
-      - name: Hello world
-        run: echo "Scraping data for ${{ inputs.state }}"
-
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -33,7 +28,32 @@ jobs:
         run: pip install warn-scraper
 
       - name: Scrape
-        run: warn-scraper ${{ inputs.state }} --data-dir ./data/
+        run: warn-scraper ${{ matrix.state }} --data-dir ./data/
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.state }}
+          path: ./data/${{ matrix.state }}.csv
+
+  commit:
+    name: Commit
+    runs-on: ubuntu-latest
+    needs: scrape # Require that the scrape function (job) has already been run
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          pattern: '*'
+          path: artifacts/
+
+      - name: Move
+        run: |
+          mkdir data -p
+          mv artifacts/**/*.csv data/ # Move the data from within individual state folders
 
       - name: Save datestamp
         run: date > ./data/latest-scrape.txt
@@ -43,4 +63,4 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@users.noreply.github.com"
           git add ./data/
-          git commit -m "Latest data for ${{ inputs.state }}" && git push || true
+          git commit -m "Latest data" && git push || true
